Fixed Labels Wrapping

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -103,7 +103,7 @@ $margin: 0.5em;
 
 .grid {
     display: grid;
-    grid-template-rows: repeat(auto-fill, 1fr);
+    grid-template-rows: 1fr;
 }
 
 .flex {
